--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api",
-  "description": "api.tigo.com.gt",
-  "main": "cluster.js",
+  "description": "api.guatemala.com.gt",
+  "main": "server.js",
   "version": "0.0.1",
   "author": "Nathan Francine Soto",
   "private": true,
@@ -22,6 +22,6 @@
     "xml2js": "^0.4.17"
   },
   "scripts": {
-    "start": "set NODE_ENV=production&&node cluster.js"
+    "start": "export NODE_ENV=production&&node server.js"
   }
 }
